tests/errors/sem.type-mismatch.call-arg.or
main :: () -> void {
    add :: (a: int, b: int) -> int {
        return a + b;
    };

    add(6u, 1);
};
